[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,20 @@
 <html>
+    <head>
+        <title>
+            article-one/Shreya Singh
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <br/>
+        <h1>Article one</h1>
+        <div>
+            August 13,2017
+        </div>
+        <div>
+            <p>This is the content for my first article</p>
+        </div>
+    </body>
 </html>
