[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,18 +4,28 @@
             article-one/Shreya Singh
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+          .container{
+              max-width: 800px;
+              margin:0 auto;
+              color: grey;
+              font-family: sans-serif;
+          } 
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <br/>
-        <h1>Article one</h1>
-        <div>
-            August 13,2017
-        </div>
-        <div>
-            <p>This is the content for my first article</p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <br/>
+            <h1>Article one</h1>
+            <div>
+                August 13,2017
+            </div>
+            <div>
+                <p>This is the content for my first article</p>
+            </div>
         </div>
     </body>
 </html>
