--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,18 +4,21 @@
             article-three/Shreya Singh
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+         <link href="/ui/style.css" rel="stylesheet"/>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <br/>
-        <h1>Article three</h1>
-        <div>
-            August 13,2017
-        </div>
-        <div>
-            <p>This is the content for my third article</p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <br/>
+            <h1>Article three</h1>
+            <div>
+                August 13,2017
+            </div>
+            <div>
+                <p>This is the content for my third article</p>
+            </div>
         </div>
     </body>
 </html>
