--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold" id="main-text">
+        <div id="main-text" class="center text-big bold">
             Hi! I am Shreya's webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
