--- a/ui/index.html
+++ b/ui/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div id="main-text" class="center text-big bold">
+        <div id='main-text' class="center text-big bold">
             Hi! I am Shreya's webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
