[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,28 @@
                 
             
         </div>
-        <script type="text/javascript" src="/ui/main.js">
+        <script>
+            var button= document.getElementById('counter');
+button.onclick = function(){
+ 
+var request=new XMLHttpRequest();
+request.onreadystatechange= function()
+{
+    if(request.readystate===XMLHttpRequest.DONE)
+    {
+        if(request.status===200){
+        var counter=request.responseText;
+        var span= document.getElementById('count');
+        span.innerHTML=counter.toString();
+    }
+    }
+};
+ 
+ request.open('GET', 'https://singhshreya8.imad.hasura-app.io/counter',true);
+ request.send(null);
+ 
+
+};
         </script>
     </body>
 </html>
